--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,12 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.10.3</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-math3</artifactId>
+    		<version>3.2</version>
+		</dependency>
 	</dependencies>
+	
 </project>
